public/css/style.css
/* ... */
.marginAround {
  margin: 0 8rem; }
  @media (max-width: 1366px) {
    .marginAround {
      margin: 0 4rem; } }
  @media (max-width: 1000px) {
    .marginAround {
      margin: 0 2rem; } }

.heading {
  text-transform: uppercase;
  letter-spacing: 3px;
  font-size: 4rem; }
  @media (max-width: 700px) {
    .heading {
      font-size: 3.2rem; } }
  .heading--primary {
    color: #00b2ff; }
  .heading--secondary {
    color: #12cad6; }

.js-loading *,
.js-loading *:before,
.js-loading *:after {
  animation-play-state: paused !important; }

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 400;
  text-transform: uppercase; }
  .nav__logo {
    margin-top: 3rem;
    display: inline-block; }
    .nav__logo__img {
      height: 2.5rem;
      display: inline-block;
      overflow: visible; }
      @media (max-width: 700px) {
        .nav__logo__img {
          height: 2rem; } }
  .nav__list {
    margin-top: 3rem;
    display: flex;
    justify-content: space-between;
    width: 46%;
    list-style: none; }
    @media (max-width: 700px) {
      .nav__list {
        flex: 0 1; } }
    @media (max-width: 700px) {
      .nav__list__item {
        display: none;
        flex: 0 1; } }
    .nav__list__item--project {
      display: block; }
    .nav__list__item__link {
      display: inline-block;
      padding: 0.5rem 0.2rem;
      font-weight: 500;
      position: relative; }
      .nav__list__item__link:link, .nav__list__item__link:visited {
        text-decoration: none; }
      .nav__list__item__link:after {
        content: '';
        display: inline-block;
        position: absolute;
        width: 0;
        height: 0.2rem;
        left: -2%;
        bottom: -10%;
        background-color: #12cad6;
        transition: 0.3s; }
      .nav__list__item__link:hover:after {
        width: 100%; }

.header {
  color: #fff;
  background-image: url("../images/background__header.png");
  background-position: center;
  background-size: cover; }
  @media (max-width: 1000px) {
    .header {
      background-position: 75%; } }
  .header__content {
    margin-top: 18rem;
    padding-bottom: 5rem; }
    @media (max-width: 700px) {
      .header__content {
        margin-left: 3rem; } }
    .header__content__main {
      font-size: 10rem;
      text-transform: uppercase;
      word-spacing: 1rem; }
      @media (max-width: 700px) {
        .header__content__main {
          font-size: 5.5rem; } }
      .header__content__main__text--greet {
        position: relative;
        transform: translate(-40rem);
        animation: heyAnimation 1s 0.5s ease forwards;
        display: inline-block; }
        .header__content__main__text--greet:after {
          content: '';
          display: inline-block;
          width: 27rem;
          height: 27rem;
          position: absolute;
          top: 0;
          left: -1rem;
          transform: scale(0) translateY(-30%);
          animation: heyBgAnimation 0.5s 1.8s ease forwards;
          background-color: rgba(0, 178, 255, 0.3);
          border-radius: 50%; }
          @media (max-width: 700px) {
            .header__content__main__text--greet:after {
              width: 15rem;
              height: 15rem; } }
      .header__content__main__text--name:after {
        content: '|';
        opacity: 0;
        color: #12cad6;
        animation: blink 500ms 3s linear infinite alternate forwards; }
    .header__content__sub {
      margin-top: 10rem; }
      .header__content__sub__profession {
        font-size: 2rem;
        display: inline-block;
        font-weight: 500; }
        .header__content__sub__profession:first-child {
          color: #12cad6;
          margin-bottom: 2rem;
          position: relative;
          transform: translateX(-30rem);
          animation: professionOne 1s 5s forwards; }
          .header__content__sub__profession:first-child:after {
            content: '';
            width: 100%;
            height: 0.15rem;
            position: absolute;
            bottom: -1rem;
            left: 0;
            background-color: #fff;
            display: block;
            transform: scaleX(0);
            animation: professionSep 0.6s 6s forwards; }
        .header__content__sub__profession:last-child {
          animation: professionTwo 1s 5s forwards;
          opacity: 0;
          transform: translateX(30rem); }

@keyframes professionOne {
  0% {
    transform: translateX(-30rem); }
  70% {
    transform: translateX(1rem); }
  100% {
    transform: translateX(0); } }

@keyframes professionSep {
  0% {
    transform: scaleX(0); }
  70% {
    transform: scaleX(1.02); }
  100% {
    transform: scaleX(1); } }

@keyframes professionTwo {
  0% {
    transform: translateX(30rem);
    opacity: 1; }
  70% {
    transform: translateX(-1rem);
    opacity: 1; }
  100% {
    transform: translateX(0);
    opacity: 1; } }

@keyframes heyAnimation {
  0% {
    transform: translate(-40rem); }
  70% {
    transform: translate(1rem); }
  100% {
    transform: translate(0); } }

@keyframes heyBgAnimation {
  0% {
    transform: translateY(-30%) scale(0); }
  100% {
    transform: translateY(-30%) scale(1); } }

@keyframes blink {
  0% {
    opacity: 0; }
  100% {
    opacity: 1; } }

.projects {
  padding-top: 8rem;
  padding-bottom: 12rem; }
  @media (max-width: 1000px) {
    .projects {
      padding-top: 6rem;
      padding-bottom: 6rem; } }
  .projects__title__sub {
    margin-top: 2rem;
    font-size: 2rem; }
  .projects__list {
    margin-top: 6rem; }
    .projects__list__row {
      display: flex;
      justify-content: space-between; }
      .projects__list__row:not(:last-child) {
        margin-bottom: 10rem; }
        @media (max-width: 700px) {
          .projects__list__row:not(:last-child) {
            margin-bottom: 0; } }
      @media (max-width: 700px) {
        .projects__list__row {
          flex-direction: column; } }
/* ... */

